--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -564,7 +564,7 @@ When we run Stainless on this code (without any properties to prove), it throws 
 Finally, everything is green and correctly verified. 
 \begin{figure}
 	\centering
-		\includegraphics[width=\textwidth]{final_verify_output}
+		\includegraphics[width=\textwidth]{result_output}
 	\caption{Output of Stainless verification for addition with 0 of Bitcoin-S-Cores CurrencyUnit}
 \end{figure}
 
