--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -65,7 +65,7 @@
 
 \authorrunning{R. Boss et al.}
 \institute{Bern University of Applied Sciences, CH-2501 Biel, Switzerland
-\email{\{ramon.boss,kai.bruennler,anna.doukmak\}@bfh.ch}}
+\email{ramon.boss@outlook.com,kai.bruennler@bfh.ch,\\anna.doukmak@gmail.com}}
 
 \maketitle             
 
